[package]
name = "koji"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
cxx = "1.0.73"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
diesel-derive-enum = { version = "1", features = ["mysql"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
geo = "0.22.1"
map_3d = "0.1.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
vrp-pragmatic = "1.18.3"

[build-dependencies]
cxx-build = "1.0.73"
