[package]
name = "koji"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
chrono = { version = "0.4.19", features = ["serde"] }
cxx = "1.0.73"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = "0.3.21"
geo = "0.22.1"
map_3d = "0.1.5"
rstar = "0.9.3"
sea-orm = { version = "^0.9.0", features = [
  "sqlx-mysql",
  "runtime-actix-native-tls",
  "macros",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
time = "0.3.16"
travelling_salesman = "1.1.22"
vrp-pragmatic = "1.18.3"
