[package]
name = "algorithms"
version = "1.1.1"
edition = "2021"
publish = false

[lib]
name = "algorithms"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
colored = "2.0.4"
geo = "0.26.0"
geohash = "0.13.0"
geojson = "0.24.1"
hashbrown = "0.14.2"
log = "0.4.20"
map_3d = "0.1.5"
model = { path = "../model" }
rand = "0.8.5"
rayon = "1.8.0"
rstar = "0.11.0"
s2 = "0.0.12"
serde = { version = "1.0.189", features = ["derive"] }
# serde_json = "1.0.94"
shuffle = "0.1.7"
# vrp-pragmatic = "1.18.3"
