[package]
name = "algorithms"
version = "1.3.0"
edition = "2024"
publish = false

[lib]
name = "algorithms"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.41"
colored = "3.0.0"
geo = "0.30.0"
geohash = "0.13.1"
geojson = "0.24.2"
hashbrown = "0.15.4"
log = "0.4.27"
map_3d = "0.1.5"
model = { path = "../model" }
rand = { version = "0.9.1", default-features = false }
rayon = "1.10.0"
rstar = "0.12.2"
s2 = "0.0.13"
serde = { version = "1.0.219", features = ["derive"] }
# serde_json = "1.0.94"
# vrp-pragmatic = "1.18.3"
sysinfo = "0.35.2"
