[package]
name = "api"
version = "1.5.1"
edition = "2024"
publish = false

[lib]
name = "api"
path = "src/lib.rs"

[dependencies]
actix-web = "4.11.0"
actix-files = "0.6.8"
actix-session = { version = "0.11.0", features = ["cookie-session"] }
actix-web-httpauth = "0.8.2"
algorithms = { path = "../algorithms" }
geo = "0.31.0"
geojson = "0.24.2"
log = "0.4.28"
migration = { path = "../migration" }
model = { path = "../model" }
nominatim = { path = "../nominatim" }
reqwest = "0.12.23"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.16"
url = "2.5.7"
