[package]
name = "app"
version = "0.3.1"
edition = "2021"
publish = false

[dependencies]
actix-web = "4"
actix-files = "0.6.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web-httpauth = "0.8.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
entity = { path = "../entity" }
env_logger = "0.9.0"
futures = "0.3.21"
geo = "0.22.1"
geohash = "0.12.0"
geojson = "0.24.0"
log = "0.4.17"
map_3d = "0.1.5"
migration = { path = "../migration" }
model = { path = "../model" }
num-traits = "0.2.15"
rstar = "0.9.3"
sea-orm = { version = "0.9.3", features = [
  "sqlx-mysql",
  "runtime-actix-native-tls",
  "macros",
] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
time = "0.3.16"
travelling_salesman = "1.1.22"
# vrp-pragmatic = "1.18.3"
