[package]
name = "migration"
version = "0.4.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
geojson = "0.24.0"
log = "0.4.17"
serde_json = "1.0"

[dependencies.sea-orm-migration]
version = "0.11.0"
# features = ["runtime-actix-native-tls", "sqlx-mysql"]
