[package]
name = "migration"
version = "1.3.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
geojson = "0.24.1"
log = "0.4.20"
serde_json = "1.0.107"

[dependencies.sea-orm-migration]
version = "0.12.4"
# features = ["runtime-actix-native-tls", "sqlx-mysql"]
