[package]
name = "migration"
version = "1.4.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.13.1", features = ["attributes", "tokio1"] }
geojson = "0.24.2"
log = "0.4.27"
serde_json = "1.0.140"

[dependencies.sea-orm-migration]
version = "1.1.12"
# features = ["runtime-actix-native-tls", "sqlx-mysql"]
