[package]
name = "model"
version = "1.5.1"
edition = "2021"
publish = false

[lib]
name = "model"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.28"
geo = "0.26.0"
geojson = "0.24.1"
geo-types = "0.7.11"
geo_repair = { path = "../geo_repair" }
log = "0.4.20"
regex = "1.10.2"
sea-orm = { version = "0.12.4", features = [
  "sqlx-mysql",
  "runtime-actix-native-tls",
  "macros",
] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.4.0"
thiserror = "1.0.50"
