[package]
name = "model"
version = "1.5.1"
edition = "2024"
publish = false

[lib]
name = "model"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
geo = "0.31.0"
geojson = "0.24.2"
geo-types = "0.7.17"
log = "0.4.28"
regex = "1.11.2"
sea-orm = { version = "1.1.16", features = [
  "sqlx-mysql",
  "runtime-actix-native-tls",
  "macros",
] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.0"
thiserror = "2.0.16"
