[package]
name = "nominatim"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "nominatim"
path = "src/lib.rs"

[dependencies]
geojson = "0.24.0"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
url = "2"
derive_builder = "0.10"
thiserror = "1"
