[package]
name = "nominatim"
version = "1.1.0"
edition = "2024"
publish = false

[lib]
name = "nominatim"
path = "src/lib.rs"

[dependencies]
geojson = "0.24.1"
reqwest = "0.11.22"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_urlencoded = "0.7.1"
log = "0.4.20"
url = "2.4.1"
derive_builder = "0.12.0"
thiserror = "1.0.50"
