[package]
name = "nominatim"
version = "1.1.0"
edition = "2024"
publish = false

[lib]
name = "nominatim"
path = "src/lib.rs"

[dependencies]
geojson = "0.24.2"
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7.1"
log = "0.4.27"
url = "2.5.4"
derive_builder = "0.20.2"
thiserror = "2.0.12"
